--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
-certifi==2022.12.7
-distlib==0.3.6
-filelock==3.9.0
-pipenv==2023.2.4
-platformdirs==3.0.0
-virtualenv==20.19.0
-virtualenv-clone==0.5.7
+bcrypt==4.1.3
+blinker==1.8.2
+click==8.1.7
+et-xmlfile==1.1.0
+Flask==3.0.3
+Flask-Bcrypt==1.0.1
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+numpy==2.0.0
+openpyxl==3.1.5
+pandas==2.2.2
+PyMySQL==1.1.1
+python-dateutil==2.9.0.post0
+pytz==2024.1
+six==1.16.0
+tzdata==2024.1
+Werkzeug==3.0.3
