--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.7
 et-xmlfile==1.1.0
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
+Flask-Mail==0.10.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
