--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 bcrypt==4.1.3
 blinker==1.8.2
+cffi==1.17.1
 click==8.1.7
+cryptography==43.0.3
 et-xmlfile==1.1.0
 Flask==3.0.3
 Flask-Bcrypt==1.0.1
@@ -11,6 +13,7 @@ MarkupSafe==2.1.5
 numpy==2.0.0
 openpyxl==3.1.5
 pandas==2.2.2
+pycparser==2.22
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
